# ros-repo-2

./: .gitignore  README.md
GUI/: gui_team2_map.pgm  gui_team2_map.yaml  io_widget.py  main_Gui copy.py  main_Gui.py  manual_widget.py  signaller.py  staff_widget.py  storage_widget.py
GUI/data/: staff_list.csv  storage_list.csv
IoT/CameraWebServer/: CameraWebServer.ino
IoT/EDS_MEGA/: EDS_MEGA.ino  EDS_MEGA.py
IoT/EDS_Uno/: EDS_Uno.ino
ROS2/AMR-A1/install/: local_setup.sh  setup.sh
ROS2/AMR-A1/log/: latest_build
ROS2/AMR-A2/install/: local_setup.ps1  local_setup.sh  setup.sh
ROS2/H-20/install/: setup.sh
ROS2/H-20/log/: latest_build
ROS2/install/: local_setup.sh  setup.sh
ROS2/log/: latest_build
ROS2/mapping/: Untitled.ipynb  final_map.pgm  final_map.yaml  frames_2025-10-28_11.14.31.gv  my_map2.pgm  my_map2.yaml  prev_final_map.pgm  prev_final_map.yaml  team2_map2.pgm  team2_map2.yaml
ROS2/mapping/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2/mapping/log/: latest_build
ROS2/mapping/src/: test.rviz
ROS2_ws/AMR-A1/: frames_2025-11-13_20.05.02.gv
ROS2_ws/AMR-A1/install/: local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2_ws/AMR-A1/log/: latest_build
ROS2_ws/AMR-A1/src/move_to_target/: package.xml  setup.py
ROS2_ws/AMR-A1/src/move_to_target/config/: my_map_waypoints copy.yaml  my_map_waypoints.yaml
ROS2_ws/AMR-A1/src/move_to_target/launch/: move_to_target_launch.py
ROS2_ws/AMR-A1/src/move_to_target/move_to_target/: docking_controller.py  evasion_controller.py  voice_nav_assistant.py  waypoint copy.py  waypoint.py  waypoint_marker.py
ROS2_ws/AMR-A2/log/: latest_build
ROS2_ws/AMR-A3/install/: local_setup.sh  setup.sh
ROS2_ws/AMR-A3/log/: latest_build
ROS2_ws/H-20/install/: local_setup.bash  local_setup.sh
ROS2_ws/H-20/src/: real_multi_robot_bridge.yaml
ROS2_ws/src/H-20/teleop_gui_pkg/: package.xml  setup.cfg  setup.py
ROS2_ws/src/H-20/teleop_gui_pkg/teleop_gui_pkg/: teleop_keyboard_node.py  teleop_subscriber_gui.py
domain_bridge/: real_multi_robot_bridge.yaml  robot21_multi_robot_bridge.yaml  robot22_multi_robot_bridge.yaml
ros2_package/install/: local_setup.sh  setup.sh
ros2_package/log/: latest_build
ros2_package/move_to_target/: package.xml  setup.cfg  setup.py
ros2_package/move_to_target/launch/: waypoint.launch.xml
ros2_package/move_to_target/move_to_target/: cmd_vel_switcher.py  pid_controller.py  waypoint.py  waypoint_marker.py
ros2_package/move_to_target/move_to_target/config/: params.yaml
server/: Central_control.py  TCP_client.py  bridge.py  robot_node.py  send_waypoint.py  sim_robot21_publisher.py  sim_robot_publisher.py  test.ui  test_AI.py
server/AI_server/: ai_server.py  aruco_action_server.py  pose_server_std_sum_act.py  test_ai_server.py
server/DB_Folder/: DB_setting.ipynb
server/ROS2,MQTT_Test/: ai_mqtt_client.py  bridge.py  robot_node.py
(+310 files in other folders)
