<?xml version="1.0"?>
<package format="3">
  <name>teleop_gui_pkg</name>
  <version>0.0.1</version>
  <description>Teleop GUI using PyQt5</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>

</package>
